优化了项目

--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel=icon href=/web/favicon.ico><title>web</title><link href=/web/css/chunk-0adaec06.e8dc2b2b.css rel=prefetch><link href=/web/css/chunk-0cc64d04.f9dfa682.css rel=prefetch><link href=/web/css/chunk-216fde6a.8e13a241.css rel=prefetch><link href=/web/css/chunk-4c69efc4.679653b7.css rel=prefetch><link href=/web/css/chunk-7476a1bb.509a4cfd.css rel=prefetch><link href=/web/css/chunk-d11434da.44ecf0b4.css rel=prefetch><link href=/web/js/chunk-0adaec06.bb668469.js rel=prefetch><link href=/web/js/chunk-0cc64d04.c993fd03.js rel=prefetch><link href=/web/js/chunk-216fde6a.8bf97aac.js rel=prefetch><link href=/web/js/chunk-4c69efc4.ae187cd5.js rel=prefetch><link href=/web/js/chunk-7476a1bb.312ade20.js rel=prefetch><link href=/web/js/chunk-d11434da.94cd030e.js rel=prefetch><link href=/web/css/app.5408ba9f.css rel=preload as=style><link href=/web/css/chunk-vendors.fbbf16cf.css rel=preload as=style><link href=/web/js/app.147a802b.js rel=preload as=script><link href=/web/js/chunk-vendors.281356fe.js rel=preload as=script><link href=/web/css/chunk-vendors.fbbf16cf.css rel=stylesheet><link href=/web/css/app.5408ba9f.css rel=stylesheet></head><body><noscript><strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/web/js/chunk-vendors.281356fe.js></script><script src=/web/js/app.147a802b.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="/favicon.ico">
+    <title>web</title>
+  <link href="/js/0.js" rel="prefetch"><link href="/js/1.js" rel="prefetch"><link href="/js/2.js" rel="prefetch"><link href="/js/3.js" rel="prefetch"><link href="/js/4.js" rel="prefetch"><link href="/js/5.js" rel="prefetch"><link href="/js/6.js" rel="prefetch"><link href="/js/7.js" rel="prefetch"><link href="/js/app.js" rel="preload" as="script"><link href="/js/chunk-vendors.js" rel="preload" as="script"></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  <script type="text/javascript" src="/js/chunk-vendors.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
+</html>
