优化了项目

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="/favicon.ico">
     <title>web</title>
-  <link href="/js/0.js" rel="prefetch"><link href="/js/1.js" rel="prefetch"><link href="/js/2.js" rel="prefetch"><link href="/js/3.js" rel="prefetch"><link href="/js/4.js" rel="prefetch"><link href="/js/5.js" rel="prefetch"><link href="/js/6.js" rel="prefetch"><link href="/js/7.js" rel="prefetch"><link href="/js/app.js" rel="preload" as="script"><link href="/js/chunk-vendors.js" rel="preload" as="script"></head>
+  <link href="/web/js/0.js" rel="prefetch"><link href="/web/js/1.js" rel="prefetch"><link href="/web/js/2.js" rel="prefetch"><link href="/web/js/3.js" rel="prefetch"><link href="/web/js/4.js" rel="prefetch"><link href="/web/js/5.js" rel="prefetch"><link href="/web/js/6.js" rel="prefetch"><link href="/web/js/7.js" rel="prefetch"><link href="/web/js/app.js" rel="preload" as="script"><link href="/web/js/chunk-vendors.js" rel="preload" as="script"></head>
   <body>
     <noscript>
       <strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
