优化了项目

--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,5 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/js/chunk-vendors.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
+  <script type="text/javascript" src="/web/js/chunk-vendors.js"></script><script type="/web/text/javascript" src="/web/js/app.js"></script></body>
 </html>
