--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/web/favicon.ico">
     <title>web</title>
   <link href="/web/js/0.js" rel="prefetch"><link href="/web/js/1.js" rel="prefetch"><link href="/web/js/2.js" rel="prefetch"><link href="/web/js/3.js" rel="prefetch"><link href="/web/js/4.js" rel="prefetch"><link href="/web/js/5.js" rel="prefetch"><link href="/web/js/6.js" rel="prefetch"><link href="/web/js/7.js" rel="prefetch"><link href="/web/js/app.js" rel="preload" as="script"><link href="/web/js/chunk-vendors.js" rel="preload" as="script"></head>
   <body>
