--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="/web/favicon.ico">
-    <title>web</title>
-  <link href="/web/js/0.js" rel="prefetch"><link href="/web/js/1.js" rel="prefetch"><link href="/web/js/2.js" rel="prefetch"><link href="/web/js/3.js" rel="prefetch"><link href="/web/js/4.js" rel="prefetch"><link href="/web/js/5.js" rel="prefetch"><link href="/web/js/6.js" rel="prefetch"><link href="/web/js/7.js" rel="prefetch"><link href="/web/js/app.js" rel="preload" as="script"><link href="/web/js/chunk-vendors.js" rel="preload" as="script"></head>
-  <body>
-    <noscript>
-      <strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/web/js/chunk-vendors.js"></script><script type="text/javascript" src="/web/js/app.js"></script></body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="/web/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/view-design/4.3.2/styles/iview.min.css">
+  <title>web</title>
+<link href="/web/js/0.js" rel="prefetch"><link href="/web/js/1.js" rel="prefetch"><link href="/web/js/2.js" rel="prefetch"><link href="/web/js/3.js" rel="prefetch"><link href="/web/js/4.js" rel="prefetch"><link href="/web/js/5.js" rel="prefetch"><link href="/web/js/6.js" rel="prefetch"><link href="/web/js/7.js" rel="prefetch"><link href="/web/js/app.js" rel="preload" as="script"><link href="/web/js/chunk-vendors.js" rel="preload" as="script"></head>
+
+<body>
+  
+  <noscript>
+    <strong>We're sorry but web doesn't work properly without JavaScript enabled.
+      Please enable it to continue.</strong>
+  </noscript>
+  
+  <div id="app"></div>
+  <script src="//unpkg.zhimg.com/vue@2.6.11/dist/vue.min.js"></script>
+  <script src="//unpkg.zhimg.com/vue-router@3.2.0/dist/vue-router.min.js"></script>
+  <script src="//unpkg.zhimg.com/vuex@3.4.0/dist/vuex.min.js"></script>
+  <script src="https://cdn.bootcss.com/echarts/4.8.0/echarts.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js"></script>
+<script type="text/javascript" src="/web/js/chunk-vendors.js"></script><script type="text/javascript" src="/web/js/app.js"></script></body>
+
 </html>
